--- a/Zhnt.Supply.csproj
+++ b/Zhnt.Supply.csproj
@@ -6,8 +6,7 @@
         <LangVersion>8</LangVersion>
         <PackageVersion>2.0.1</PackageVersion>
         <AssemblyVersion>2.0.1</AssemblyVersion>
-        <Copyright>Skyiah Ltd</Copyright>
-        <RootNamespace>SkyHeal</RootNamespace>
+        <Copyright>ZhenQi Ltd</Copyright>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
