--- a/Zhnt.Supply.csproj
+++ b/Zhnt.Supply.csproj
@@ -7,6 +7,7 @@
         <PackageVersion>2.0.1</PackageVersion>
         <AssemblyVersion>2.0.1</AssemblyVersion>
         <Copyright>ZhenQi Ltd</Copyright>
+        <RootNamespace>Zhnt.Supply</RootNamespace>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
