--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "password": "Gs721004"
   },
   "ext": {
-    "url": "http://zhnt-ng.com",
+    "url": "http://zhnt-x.com",
     "appid": "wx15809e9c6f599b8c",
     "appsecret": "2df432cb748a371d1388f428af9eabe1",
     "mchid": "1584964561",
