--- a/app.json
+++ b/app.json
@@ -2,15 +2,17 @@
   "logging": 2,
   "crypto": "ebce206103e439514f3c4748c683274e",
   "certpass": "fVC2ToAq",
-  "web": {
-    "main": "http://localhost"
-  },
-  "db": {
+  "chain": {
     "host": "121.43.190.163",
     "port": 5432,
     "database": "supply",
     "username": "postgres",
-    "password": "Gs721004"
+    "password": "Gs721004",
+    "name": "中惠农通",
+    "tip": "中惠农通新型供应链"
+  },
+  "web": {
+    "main": "http://localhost"
   },
   "ext": {
     "url": "http://zhnt-x.com",
