--- a/Revital.csproj
+++ b/Revital.csproj
@@ -11,10 +11,12 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <PlatformTarget>x64</PlatformTarget>
+      <DefineConstants>TRACE ZHNT</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <PlatformTarget>x64</PlatformTarget>
+      <DefineConstants>TRACE ZHNT</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
