--- a/Revital.csproj
+++ b/Revital.csproj
@@ -11,7 +11,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <PlatformTarget>x64</PlatformTarget>
-      <DefineConstants>TRACE ZHNT</DefineConstants>
+      <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
