--- a/Revital.csproj
+++ b/Revital.csproj
@@ -12,7 +12,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <PlatformTarget>x64</PlatformTarget>
-      <DefineConstants>TRACE</DefineConstants>
+      <DefineConstants>TRACE ZHNT</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
