--- a/Revital.csproj
+++ b/Revital.csproj
@@ -21,6 +21,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Npgsql" Version="4.1.10" />
       <PackageReference Include="System.Threading.Timer" Version="4.3.0" />
     </ItemGroup>
 
