--- a/revital.service
+++ b/revital.service
@@ -4,8 +4,8 @@ Description=A Deployment of The Revital Platform
 [Service]
 EnvironmentFile=/etc/environment
 Type=forking
-WorkingDirectory=/root
-ExecStart=/usr/bin/dotnet /root/publish/Revital.dll deploy
+WorkingDirectory=/home/ubuntu
+ExecStart=sudo /usr/bin/dotnet /home/ubuntu/publish/Revital.dll deploy
 Restart=always
 
 [Install]
