--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "name": "中惠农通（江西）",
     "tip": "智慧农贸及供应链平台"
   },
-  "web-pub": {
+  "web-www": {
     "address": "http://localhost:80"
   },
   "web-mgt": {
