--- a/app.json
+++ b/app.json
@@ -5,13 +5,13 @@
   "store": {
     "host": "81.69.218.155",
     "port": 5432,
-    "database": "revital",
+    "database": "main",
     "username": "postgres",
     "password": "Gs721004",
     "name": "中惠农通（江西）",
     "tip": "智慧农贸及供应链平台"
   },
-  "web-dir": {
+  "web-main": {
     "address": "http://localhost:80"
   },
   "web-site": {
