--- a/app.json
+++ b/app.json
@@ -1,26 +1,22 @@
 {
   "logging": 2,
-  "crypto": "ebce206103e439514f3c4748c683274e",
-  "certpass": "fVC2ToAq",
+  "fedkey": "ebce206103e439514f3c4748c683274e",
+  "famkey": "ebce206103e439514f3c4748c683274e",
+  "certpasswd": "fVC2ToAq",
   "store": {
     "host": "81.69.218.155",
     "port": 5432,
     "database": "main",
     "username": "postgres",
     "password": "Gs721004",
-    "name": "中惠农通（江西）",
+    "name": "中惠农通",
     "tip": "智慧农贸及供应链平台"
   },
   "web-main": {
     "address": "http://localhost:80"
   },
-  "web-site": {
-    "address": "http://localhost:81"
-  },
   "ext": {
-    "url": "http://zhnt-x.com",
-    "url-img": null,
-    "url-msg": null,
+    "url": "http://ezhnt.cn",
     "appid": "wx15809e9c6f599b8c",
     "appsecret": "2df432cb748a371d1388f428af9eabe1",
     "mchid": "1584964561",
