--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "chain": {
     "host": "81.69.218.155",
     "port": 5432,
-    "database": "main",
+    "database": "revital",
     "username": "postgres",
     "password": "Gs721004",
     "name": "中惠农通",
