--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "database": "revital",
     "username": "postgres",
     "password": "Gs721004",
-    "name": "中惠农通",
+    "name": "中惠农通（江西）",
     "tip": "智慧农贸及供应链平台",
     "domain": "ezhnt.cn",
     "secure": false,
