--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "password": "Gs721004",
     "name": "中惠农通（江西）",
     "tip": "智慧农贸及供应链平台",
-    "domain": "ezhnt.cn",
+    "domain": "jx.ezhnt.cn",
     "secure": false,
     "fedkey": "ebce206103e439514f3c4748c683274e"
   },
