--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "database": "revital",
     "username": "postgres",
     "password": "Gs721004",
-    "name": "中惠农通（江西）",
-    "tip": "智慧农贸及供应链平台",
+    "name": "城乡元宇宙",
+    "tip": "城乡元宇宙生态项目平台",
     "domain": "jx.ezhnt.cn",
     "secure": false,
     "fedkey": "ebce206103e439514f3c4748c683274e"
