--- a/app.json
+++ b/app.json
@@ -2,23 +2,25 @@
   "logging": 2,
   "certpasswd": "fVC2ToAq",
   "crypto": "ebce206103e439514f3c4748c683274e",
-  "nodal": {
+  "store": {
     "host": "81.69.218.155",
     "port": 5432,
-    "database": "coverse",
+    "database": "urbrural",
     "username": "postgres",
     "password": "Gs721004",
     "name": "城乡元宇宙",
     "tip": "城乡元宇宙项目平台",
-    "domain": "jx.ezhnt.cn",
-    "secure": false,
+    "welurl": "http://jx.ezhnt.cn",
     "fedkey": "ebce206103e439514f3c4748c683274e"
   },
   "web-www": {
-    "address": "http://localhost:80"
+    "url": "http://localhost:80"
   },
   "web-mgt": {
-    "address": "http://localhost:81"
+    "url": "http://localhost:81"
+  },
+  "web-fed": {
+    "url": "http://localhost:82"
   },
   "ext": {
     "url": "http://ezhnt.cn",
