--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
   "web-fed": {
     "url": "http://localhost:82"
   },
-  "ext": {
+  "prog": {
     "url": "http://ezhnt.cn",
     "appid": "wx15809e9c6f599b8c",
     "appsecret": "2df432cb748a371d1388f428af9eabe1",
