--- a/ChainVerse.csproj
+++ b/ChainVerse.csproj
@@ -7,6 +7,7 @@
         <PackageVersion>2.0.1</PackageVersion>
         <AssemblyVersion>2.0.1</AssemblyVersion>
         <Copyright>Jzg Research</Copyright>
+        <RootNamespace>Urbrural</RootNamespace>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -31,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CoChain\CoChain.csproj" />
+      <ProjectReference Include="..\ChainFx\ChainFx.csproj" />
     </ItemGroup>
 
 </Project>
